# MolPhysChemSpectroscopy

./: CMakeLists.txt  README.md  pyproject.toml
pySpec/: __init__.py
pySpec/SpecAnalyze/: __init__.py  analyzeIntegral.py  analyzeIntegral_old.py  analyzeProductSpectrum.py  analyzeStatistics.py
pySpec/SpecAnalyze/GlobalFit/: __init__.py  analyzeGlobalFit.py  analyzeKineticModel.py  analyzePartialTargetFit.py  analyzeSpectroTemporalTargetFit.py
pySpec/SpecAnalyze/LifetimeDensityAnalysis/: __init__.py  analyzeLDA.py  analyzeLDAAxes.py  analyzeLDAStatistics.py
pySpec/SpecAnalyze/NumericalFit/: __init__.py  analyzeExponentialFunction.py  analyzeLineshapeFunction.py  analyzeNumericalFit.py  analyzeSpectralFit.py  analyzeTransientFit.py
pySpec/SpecAnalyze/WavePacketAnalysis/: AnalyzeWavePacket.m  __init__.py  analyzeWavePacket.py
pySpec/SpecCore/: __init__.py  coreCalculationParser.py  coreFunctions.py  coreLineShapes.py  coreParser.py
pySpec/SpecCore/SpecCoreAxis/: __init__.py  coreAbstractAxis.py  coreEnergyAxis.py  coreTimeAxis.py  coreWavelengthAxis.py
pySpec/SpecImport/: __init__.py  importBase.py  importCalculation.py  importTAS.py  importTimeResolvedFTIR.py  importUVmIR.py
pySpec/SpecPlot/: __init__.py  plotFluorescence.py  plotIR.py  plotMPCFigure.py  plotStaticMethods.py  plotTransSpec.py  plotUVVis.py  publication.mplstyle
pySpec/SpecTransform/: __init__.py  transformAlignment.py  transformBaseline.py  transformRemoveDiscontinuity.py  transformStitchCorrection.py
pySpec/SpecUtility/: utilitySpecFactory.py
pySpec/pyStitchCorr/: __init__.py  stitchCorr.pyi
(+13 files in other folders)
